--- a/_app/styles/base/_typography.scss
+++ b/_app/styles/base/_typography.scss
@@ -66,8 +66,6 @@ picture {
 blockquote {
   font-style: italic;
   display: block;
-  margin: 2em;
-  padding: em(15) em(20) .1em 1em;
   line-height: 1.2;
   text-align: justify;
   border-left: em(8) solid $base-orange-faded;
